Archive2/99/8109273132384e/output
main.cpp:5:9: error: use of undeclared identifier 'std'
        std::cout << typeid(T).name() << std::endl;
        ^
main.cpp:5:22: error: you need to include <typeinfo> before using the 'typeid' operator
        std::cout << typeid(T).name() << std::endl;
                     ^
main.cpp:5:42: error: use of undeclared identifier 'std'
        std::cout << typeid(T).name() << std::endl;
                                         ^
main.cpp:18:5: error: use of undeclared identifier 'std'
    std::vector<int> vec = obj;
    ^
main.cpp:18:20: error: expected '(' for function-style cast or type construction
    std::vector<int> vec = obj;
                ~~~^
main.cpp:18:22: error: use of undeclared identifier 'vec'
    std::vector<int> vec = obj;
                     ^
main.cpp:19:5: error: use of undeclared identifier 'std'
    std::string str = obj;
    ^
7 errors generated.
